release: promote public support and mentor access routes (#41)
* docs: mirror Claude guidance for Codex

* feat(release): bind staging browser control routes

* fix(cors): allow sandbox event version header

* feat: route and secure mentor access APIs (#39)

* feat: route anonymous public support requests

* feat: route mentor access APIs

* test: cover gateway route boundaries

* fix: scope homepage CORS to public APIs

* fix: enforce mentor access at gateway

* docs: list mentor and support gateway routes

Co-Authored-By: OpenAI Codex <noreply@openai.com>

---------

Co-authored-by: OpenAI Codex <noreply@openai.com>

---------

Co-authored-by: OpenAI Codex <noreply@openai.com>